Updated strategy page to show the number of errors found while executing the strategy.

--- a/googleappengine/app/templates/strategy.html
+++ b/googleappengine/app/templates/strategy.html
@@ -86,7 +86,7 @@
 			<b>Best result found was {{ finished_execution.best_result }} with parameters {{ finished_execution.best_result_parameters }}.</b>
 		{% endif %}
 		{% if finished_execution.additional_info %}
-			<b>{{ finished_execution.additional_info }}.</b>
+			<b>{{ finished_execution.additional_info }}</b>
 		{% endif %}
 		</li>
 	{% endfor %}
